public interface Integrator {
    void step(Universe u, double dt);
}
